--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,3 +32,54 @@ h1 {
     align-self: flex-start;
     margin-right:180px;
   }
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-title {
+  flex: 1;
+  text-align: center;
+}
+.add-button {
+    float: right;
+}
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 35%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.show {
+    display: block;
+}
